# soccerrsr

./: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE
.github/workflows/: intel-macos-ort.yml  r-universe-win-test.yml  test_ci.yaml
R/: extendr-wrappers.R  soccer.R  zzz.R
man/: SOCcerNET.Rd  clips.Rd  embed.Rd  embed_job.Rd  run_soccernet.Rd  soccer_net.Rd
src/: Makevars.in  Makevars.win.in  entrypoint.c  install.libs.R  soccerrsr-win.def
src/rust/: Cargo.toml  document.rs
src/rust/src/: lib.rs
tests/: dynamic-onnx-runtime.R
tools/: config.R
