[package]
name = 'soccerrsr'
publish = false
version = '0.1.2'
edition = '2021'
rust-version = '1.65'

[lib]
crate-type = ["staticlib"]
name = 'soccerrsr'

[dependencies]
extendr-api = '0.9.0'
indicatif = "0.17.8"
soccer-rs = { path = "../../../soccer-rs" }

[dev-dependencies]
extendr-engine = "0.9"

[profile.release]
lto = true
codegen-units = 1
