[package]
name = 'soccerrsr'
publish = false
version = '0.1.2'
edition = '2021'
rust-version = '1.65'

[lib]
crate-type = [ "rlib", "staticlib"]
name = 'soccerrsr'

[[bin]]
name = 'document'
path = 'document.rs'
bench = false

[dependencies]
extendr-api = '*'
indicatif = "0.17.8"
soccer-rs = "0.1.11"

[dev-dependencies]
extendr-engine = "0.9"

[profile.release]
lto = true
codegen-units = 1
